--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "hbs": "~3.1.0",
+    "jade": "^1.11.0",
     "morgan": "~1.6.1",
     "node-sass-middleware": "0.8.0",
+    "pg": "4.4.3",
     "serve-favicon": "~2.3.0"
   }
 }
