--- a/package.json
+++ b/package.json
@@ -1,20 +1,26 @@
 {
   "name": "monthly-income",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
+    "coffee-script": "^1.10.0",
     "cookie-parser": "~1.3.5",
+    "cookie-session": "^1.2.0",
     "debug": "~2.2.0",
     "express": "~4.13.1",
-    "hbs": "~3.1.0",
+    "express-session": "^1.12.1",
     "jade": "^1.11.0",
+    "mongoose": "^4.3.1",
     "morgan": "~1.6.1",
     "node-sass-middleware": "0.8.0",
-    "pg": "4.4.3",
+    "passport": "^0.3.2",
+    "passport-http": "^0.3.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^3.1.0",
     "serve-favicon": "~2.3.0"
   }
 }
