--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "body-parser": "~1.13.2",
-    "coffee-script": "^1.10.0",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.3.5",
     "cookie-session": "^1.2.0",
     "debug": "~2.2.0",
